--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,38 +1,27 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- link to Jquery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <!-- Link to CSS -->
-    <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="styles/styleHome.css">
-    <!-- Compiled and minified CSS -->
+    {{!-- LINK TO BOOTSTRAP --}}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    {{!-- link to materialize --}}
+       <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <!-- Link to Google Fontos -->
-    <link href="https://fonts.googleapis.com/css?family=Chango|Gugi&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Galindo|Keania+One|Nova+Flat|Salsa|Wallpoet&display=swap"
-        rel="stylesheet">
-    <!-- MATERIAL ICON -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- font awesome -->
-    <script src="https://use.fontawesome.com/aea2d8341a.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
-    <title>
-        Eat-da-candy
-    </title>
+    {{!-- LINK TO CSS --}}
+    <link rel="stylesheet" href="..//public/assets/css/styles.css">
+    {{!-- FONTS --}}
+    <link href="https://fonts.googleapis.com/css?family=Leckerli+One|Over+the+Rainbow|Sacramento&display=swap" rel="stylesheet">
+    <title>EAT DA CANDY</title>
 </head>
-
 <body>
-  {{{body}}}
-  <script src="/public/js/index.js"/>
-</body>
+    	{{{ body }}}
+	<script src="/assets/js/burgers.js"></script>
 
+    
+</body>
 </html>
